# sapiens-pytorch-inference

./: .editorconfig  .gitignore  README.md  pyproject.toml
.devcontainer/: compose.yml  devcontainer.json  init.sh  install-dev-tools.sh
src/sapiens_inference/: common.py  detector.py  predictor.py  segmentation.py
src/scripts/: image_normal_estimation.py  image_pose_estimation.py  image_predictor.py  image_segmentation.py  onnx_export.py
src/scripts/utils/: file.py  image.py
