[project]
name = "sapiens-pytorch-inference"
version = "0.2.0"
description = "Run Sapiens Human Foundation models in Pytorch"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ibai Gorordo"},
    {name = "Iván Bravo Bravo", email = "ivan@opendreamnet.com"}
]
requires-python = ">=3.10"

dependencies = [
    "opencv-python>=4.11.0.86",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.3.73",
]

[dependency-groups]
onnx = [
    "onnx>=1.17.0",
    "onnxruntime>=1.20.1",
]

[tool.uv]
package = true