[project]
name = "sapiens-pytorch-inference"
version = "0.2.0"
description = "Run Sapiens Human Foundation models in Pytorch"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ibai Gorordo"},
    {name = "Iván Bravo Bravo", email = "ivan@opendreamnet.com"}
]
requires-python = ">=3.10"

dependencies = [
    "huggingface-hub>=0.28.1",
    "opencv-python>=4.11.0.86",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.3.73",
]

[project.optional-dependencies]
onnx = [
    "onnx>=1.17.0",
    "onnxruntime>=1.20.1",
]

[dependency-groups]
scripts = [
    "cap-from-youtube>=0.2.0",
    "imread-from-url>=0.1.3",
]

[project.scripts]
image_normal_estimation = "scripts:image_normal_estimation"

[tool.uv]
package = true
