[project]
name = "sapiens-pytorch-inference"
version = "0.2.0"
description = "Run Sapiens Human Foundation models in Pytorch"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ibai Gorordo"},
    {name = "Iván Bravo Bravo", email = "ivan@opendreamnet.com"}
]
requires-python = ">=3.10"

dependencies = [
    "huggingface-hub>=0.26.1",
    "opencv-python>=4.9.0.80",
    "torch<2.5.0",
    "torchvision>=0.19.1",
    "ultralytics",
]

[project.optional-dependencies]
onnx = [
    "onnx>=1.17.0",
    "onnxruntime>=1.20.1",
]

[dependency-groups]
scripts = [
    "cap-from-youtube>=0.2.0",
    "fake-useragent>=2.0.3",
]

[project.scripts]
image_normal_estimation = "scripts.image_normal_estimation:run"
image_pose_estimation = "scripts.image_pose_estimation:run"
image_predictor = "scripts.image_predictor:run"
image_segmentation = "scripts.image_segmentation:run"
onnx_export = "scripts.onnx_export:run"

[tool.uv]
package = true
